# MyOpenGLEngine

./: .gitignore
MyOpenGLEngine/: ActorComponent.h  CMakeLists.txt  MyOpenGLEngine.cpp  MyOpenGLEngine.h  myFile.lua.lua
MyOpenGLEngine/core/: Actor.cpp  Actor.h  Application.cpp  Ball.cpp  Ball.h  Camera.cpp  Camera.h  LineMesh.cpp  LineMesh.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshBase.h  MeshGenerator.cpp  MeshGenerator.h  Scene.cpp  Scene.h  ShaderProgram.cpp  ShaderProgram.h  Timer.h  Transform.cpp  Transform.h  Triangle.h  Vertex.h  Window.cpp  Window.h  application.h  framebuffer.h  tempTest.h  test.cpp  test.h
MyOpenGLEngine/core/BSpline/: BSpline.h  BSplineSurface.cpp  BSplineSurface.h
MyOpenGLEngine/core/Collision/: Colliders.cpp  Colliders.h  CollisionManager.cpp  CollisionManager.h  OcTree.cpp  OcTree.h  OcTreeNode.h
MyOpenGLEngine/core/ECS/: ECSManager.cpp  ECSManager.h  Entity.cpp  Entity.h  EntityComponentSystemManager.cpp  EntityComponentSystemManager.h
MyOpenGLEngine/core/ECS/ComponentHandler/: ComponentHandler.h  HandlerInterface.h
MyOpenGLEngine/core/ECS/Components/: ColorComponent.h  CombatComponent.h  ComponentBase.h  HealthComponent.h  InputComponent.h  MeshComponent.h  MovementComponent.h  PickupComponent.h  SphereColliderComponent.h  TransformComponent.h  VelocityComponent.h
MyOpenGLEngine/core/ECS/Systems/: AICombatSystem.h  CollisionSystem.h  ColorSystem.h  CombatSystem.cpp  CombatSystem.h  MeshSystem.h  MovementSystem.cpp  MovementSystem.h  PickupSystem.h  RenderSystem.h  SystemBase.h
MyOpenGLEngine/core/Landscape/: Chunk.h  Landscape.cpp  Landscape.h  LandscapeGenerator.cpp  LandscapeGenerator.h  LandscapeMesh.cpp  LandscapeMesh.h
MyOpenGLEngine/core/Lua/: Lua.cpp  Lua.h
MyOpenGLEngine/core/ParticleSystem/: ParticleSystem.cpp  ParticleSystem.h
MyOpenGLEngine/core/PunktSky/: PunktSky.cpp  PunktSky.h
MyOpenGLEngine/core/shaders/: FragmentShader.frag  VertexShader.vert  VertexShaderInstance.vert
MyOpenGLEngine/core/shaders/lineShaders/: LineFragmentShader.frag  LineVertexShader.vert
